[MODORDSTOR-342] - Update to Java 17 mod-orders-storage (#345)
* [MODORDSTOR-342] - Update to Java 17 mod-orders-storage

* [MODORDSTOR-342] - Modified deprecated methods and Improved syntax for Java 17

* [MODORDSTOR-342] - Fixed unit test

* [MODORDSTOR-342] - Fixed unit test

* [MODORDSTOR-342] - Improved pom.xml

* [MODORDSTOR-342] - Improved pom.xml

* [MODORDSTOR-342] - Minor improvements after pr review

* [MODORDSTOR-342] - Minor improvements